# cockpit

./: Makefile.am  x
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md
bots/: image-refresh  run-queue
bots/task/: __init__.py
pkg/networkmanager/: firewall-client.js  firewall.jsx
pkg/systemd/: overview.jsx  overview.less
pkg/systemd/overview-cards/: lastlogCard.jsx  lastlogCard.less
po/: ca.po  cs.po  de.po  es.po  fi.po  fr.po  it.po  pl.po  pt_BR.po  ru.po  sv.po  uk.po  zh_TW.po
src/branding/opensuses-microos/: Makefile.am
test/common/: testlib.py
test/verify/: check-machines-dbus  check-machines-virsh  check-networking-firewall  check-system-s4u-ssh  check-testlib  machineslib.py  run-tests  s4u-setup
